src/objects/Lunch_Meetup__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address of the lunch meetup</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>IMAGE(
   &apos;https://maps.googleapis.com/maps/api/staticmap?&apos; &amp; 
   &apos;&amp;size=320x200&apos; &amp;
   &apos;&amp;center=&apos; &amp;  Address__c &amp;
   &apos;&amp;zoom=15&apos; &amp;
   &apos;&amp;markers=icon:http://chart.apis.google.com/chart?chst=d_map_pin_icon%26chld=cafe%257C996600%7C&apos; &amp;  Address__c
, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lunch__c</fullName>
        <label>Lunch</label>
        <referenceTo>Lunch__c</referenceTo>
        <relationshipLabel>Lunch Meetups</relationshipLabel>
        <relationshipName>Lunch_Meetups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Participants__c</fullName>
        <label>#Participants</label>
        <summaryForeignKey>Lunch_Participant__c.Lunch_Meetup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brasserie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pic-nic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandwich</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Lunch Meetup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Participants__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Location__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lunch Meetup Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lunch Meetups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>